@@ -58,3 +58,11 @@ need to add the checkerboard 'scratch pad' -- coming soon :)
 
 -------------------------------------------------------------------------------
 
+Wed Feb 9 14:12:56 CST 2000
+(dphase)
+
+Ok, going to File->Save will save the current image now.  Will make Save As
+work soon.
+
+-------------------------------------------------------------------------------
+
